--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Start Profile -->
         <section id="profile">
             <div class="container">
-                <img src="/img/radit.jpg" alt="Raditya Dika" class="img-thumbnail" />
+                <img src="./img/radit.jpg" alt="Raditya Dika" class="img-thumbnail" />
                 <h1 class="name-title">Raditya Dika</h1>
                 <p class="job-profile">Author <span>|</span> Movie Director <span>|</span> Stand-Up Comedian</p>
             </div>
@@ -62,7 +62,7 @@
                 <div class="item-card">
                     <div class="item">
                         <div class="card">
-                            <img src="/img/projects1.jpg" alt="Awards" class="img-card" />
+                            <img src="./img/projects1.jpg" alt="Awards" class="img-card" />
                             <p>
                                 <span>2019</span><br />
                                 Creator of the Year at WebTVAsia
@@ -71,7 +71,7 @@
                     </div>
                     <div class="item">
                         <div class="card">
-                            <img src="/img/projects2.jpg" alt="Awards" class="img-card" />
+                            <img src="./img/projects2.jpg" alt="Awards" class="img-card" />
                             <p>
                                 <span>2017</span><br />
                                 Creative and Innovative Person at Indonesian Choice Award
@@ -80,7 +80,7 @@
                     </div>
                     <div class="item">
                         <div class="card">
-                            <img src="/img/projects3.jpg" alt="Awards" class="img-card" />
+                            <img src="./img/projects3.jpg" alt="Awards" class="img-card" />
                             <p>
                                 <span>2015</span><br />
                                 Digital Persona at Indonesian Choice Award
@@ -89,7 +89,7 @@
                     </div>
                     <div class="item">
                         <div class="card">
-                            <img src="/img/projects4.jpg" alt="Awards" class="img-card" />
+                            <img src="./img/projects4.jpg" alt="Awards" class="img-card" />
                             <p>
                                 <span>2014</span><br />
                                 1 Million subscribers at Youtube
@@ -98,7 +98,7 @@
                     </div>
                     <div class="item">
                         <div class="card">
-                            <img src="/img/projects5.jpg" alt="Awards" class="img-card" />
+                            <img src="./img/projects5.jpg" alt="Awards" class="img-card" />
                             <p>
                                 <span>2009</span><br />
                                 The Online Inspiring Award from Indosat
